...
                        },
                        tabs: [
                          tabController!.index == 0
                              ? boxSelected("To do")
                              : boxUnselected("To do"),
                          tabController!.index == 1
                              ? boxSelected("Doing")
                              : boxUnselected("Doing"),
                          tabController!.index == 2
                              ? boxSelected("Done")
                              : boxUnselected("Done"),
                        ],
                      ),
                    ),
                  ),
                ],
...
