...
      }
      return Scaffold(
        backgroundColor: Colors.white,
        body: Container(
          width: Sizer(context).w,
          child: SingleChildScrollView(
            key: const Key('scroll'),
            controller: scrollController,
            child: Builder(builder: (context) {
              if (showTask != null) {
                return Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  mainAxisAlignment: MainAxisAlignment.start,
...
            key: ValueKey(index),
            endActionPane: ActionPane(
              extentRatio: 0.2,
              motion: const ScrollMotion(),
              children: [
                SlidableAction(
                  key: const Key("deletebutton"),
                  onPressed: (context) {
                    BlocProvider.of<TodoBloc>(context)
                        .add(RemoveTodo(only.id!));
                  },
                  backgroundColor: Colors.red,
                  icon: Icons.delete_outline,
...
